--- a/flutter_project/pubspec.yaml
+++ b/flutter_project/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   wave: ^0.2.0
   charts_flutter: ^0.12.0
   fl_chart: ^0.45.1
+  sensors_plus: ^1.3.0
 
 dev_dependencies:
   flutter_test:
