--- a/flutter_project/android/app/build.gradle
+++ b/flutter_project/android/app/build.gradle
@@ -61,6 +61,14 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    aaptOptions {
+        noCompress 'tflite'
+    }
+
+    lintOptions {
+        disable 'InvalidPackage'
+    }
 }
 
 flutter {
@@ -69,4 +77,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.tensorflow:tensorflow-lite-select-tf-ops:+"
 }
