--- a/flutter_project/pubspec.yaml
+++ b/flutter_project/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   charts_flutter: ^0.12.0
   fl_chart: ^0.45.1
   sensors_plus: ^1.3.0
+  tflite_audio: ^0.3.0
 
 dev_dependencies:
   flutter_test:
@@ -66,9 +67,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/labels.txt
+    - assets/sound_model.tflite
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
