--- a/flutter_project/pubspec.yaml
+++ b/flutter_project/pubspec.yaml
@@ -36,18 +36,22 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   permission_handler: ^9.2.0
-  flutter_sound: ^8.4.2
+  flutter_sound: ^9.1.9
   intl: ^0.17.0
   wave: ^0.2.0
   charts_flutter: ^0.12.0
   fl_chart: ^0.45.1
   sensors_plus: ^1.3.0
   tflite_audio: ^0.3.0
+  path_provider: ^2.0.9
+  dio: ^4.0.6
+  audio_session: ^0.1.6+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  #   flutter_sound: ^8.4.2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -70,7 +74,9 @@ flutter:
   assets:
     - assets/labels.txt
     - assets/sound_model.tflite
-
+    - assets/audio/test.wav
+    - assets/labels2.txt
+    - assets/soundclassifier_with_metadata.tflite
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
